--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.x",
+    "npm": "9.x"
   },
   "strapi": {
     "uuid": "eb72eac8-28a7-4dfb-b509-a193dab5cca6"
